--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ main {
   height: 222px;
   width: 311px;
   box-shadow: 0px 4px 4px hsla(0, 0%, 0%, 0.25);
+  box-shadow: 0px 6px 16px hsla(0, 0%, 0%, 0.2);
   border-radius: 8px;
   border-top: 3.55px solid;
   padding: 28px;
@@ -78,6 +79,7 @@ main {
   background-repeat: no-repeat;
   background-position: right 28px bottom 28px;
   background-color: #ffffff;
+  background-size: 57px;
 }
 
 .card__header {
@@ -111,4 +113,23 @@ main {
 .card--calculator {
   border-color: hsl(212, 86%, 64%);
   background-image: url("./images/icon-calculator.svg");
+}
+
+@media only screen and (min-width: 1125px) {
+  header {
+    font-size: 36px;
+    width: 540px;
+  }
+
+  main {
+    width: 1110px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .card {
+    width: 350px;
+    height: 250px;
+    background-size: 64px;
+  }
 }
